[package]
name = "rest_api_chm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
actix-multipart = "0.7.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
